--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CHS9QHQ1KG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-CHS9QHQ1KG');
+  </script>
   <meta charset="utf-8">
   <title>Reality Check</title>
   <base href="/">
